--- a/feature-daily-logs.html
+++ b/feature-daily-logs.html
@@ -7,6 +7,7 @@
     <title>Daily Mood & Stress Logging - Harmony AI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/button-states.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
@@ -96,6 +97,30 @@
         [style*="background: white"] {
             background: var(--bg-primary) !important;
         }
+
+        /* Mood selector buttons */
+        .mood-btn {
+            background: var(--bg-tertiary);
+            border: 2px solid var(--border-color);
+            color: var(--text-primary);
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .mood-btn:hover {
+            border-color: #2A9D8F;
+            background: rgba(42, 157, 143, 0.1);
+        }
+
+        .mood-btn.active {
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
+            color: white;
+            border-color: #2A9D8F;
+        }
     </style>
 </head>
 
@@ -115,6 +140,10 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <a href="./login.html" class="nav-auth-btn login" id="loginBtn"><span class="btn-icon">🔑</span>
+                    Login</a>
+                <button class="nav-auth-btn logout" id="logoutBtn" onclick="logout()" style="display:none;"><span
+                        class="btn-icon">🚪</span> Logout</button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -141,18 +170,24 @@
             <form id="moodLogForm">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <label for="mood" class="form-label">Mood</label>
-                        <select class="form-select" id="mood" required>
-                            <option value="">Select mood...</option>
-                            <option value="Happy">😊 Happy</option>
-                            <option value="Sad">😢 Sad</option>
-                            <option value="Anxious">😰 Anxious</option>
-                            <option value="Calm">😌 Calm</option>
-                            <option value="Energetic">⚡ Energetic</option>
-                            <option value="Tired">😴 Tired</option>
-                            <option value="Neutral">😐 Neutral</option>
-                            <option value="Angry">😠 Angry</option>
-                        </select>
+                        <label for="mood" class="form-label">Mood Level</label>
+                        <div class="mood-selector" style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                            <button type="button" class="mood-btn" data-mood="Very Sad" title="Very Sad">😢 Very
+                                Sad</button>
+                            <button type="button" class="mood-btn" data-mood="Sad" title="Sad">😔 Sad</button>
+                            <button type="button" class="mood-btn" data-mood="Neutral" title="Neutral">😐
+                                Neutral</button>
+                            <button type="button" class="mood-btn" data-mood="Calm" title="Calm">😌 Calm</button>
+                            <button type="button" class="mood-btn" data-mood="Happy" title="Happy">😊 Happy</button>
+                            <button type="button" class="mood-btn" data-mood="Very Happy" title="Very Happy">🥳 Very
+                                Happy</button>
+                            <button type="button" class="mood-btn" data-mood="Anxious" title="Anxious">😰
+                                Anxious</button>
+                        </div>
+                        <input type="hidden" id="mood" value="Neutral">
+                        <small id="moodValue"
+                            style="color: #2A9D8F; font-weight: 600; display: block; margin-top: 0.5rem;">Selected:
+                            Neutral</small>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="stressLevel" class="form-label">Stress Level (1-10)</label>
@@ -226,12 +261,31 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api-service.js"></script>
+    <script src="assets/js/notifications.js"></script>
     <script src="assets/js/patient-data.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
         let currentLogs = [];
+
+        // Mood button selection
+        document.querySelectorAll('.mood-btn').forEach(btn => {
+            btn.addEventListener('click', (e) => {
+                e.preventDefault();
+                document.querySelectorAll('.mood-btn').forEach(b => b.classList.remove('active'));
+                btn.classList.add('active');
+                const selectedMood = btn.getAttribute('data-mood');
+                document.getElementById('mood').value = selectedMood;
+                document.getElementById('moodValue').textContent = 'Selected: ' + selectedMood;
+            });
+        });
+
+        // Set initial mood button as active
+        document.addEventListener('DOMContentLoaded', () => {
+            const initialMood = document.getElementById('mood').value;
+            document.querySelector(`[data-mood="${initialMood}"]`)?.classList.add('active');
+        });
 
         // Range input listeners
         document.getElementById('stressLevel').addEventListener('input', (e) => {
@@ -356,8 +410,13 @@
             }
 
             document.getElementById('moodLogForm').reset();
+            document.querySelectorAll('.mood-btn').forEach(b => b.classList.remove('active'));
+            document.querySelector('[data-mood="Neutral"]')?.classList.add('active');
+            document.getElementById('mood').value = 'Neutral';
+            document.getElementById('moodValue').textContent = 'Selected: Neutral';
             document.getElementById('stressValue').textContent = '5';
             document.getElementById('anxietyValue').textContent = '5';
+            document.getElementById('sleepHours').value = '7';
         });
 
         // Mobile menu setup
@@ -369,10 +428,34 @@
             }
         }
 
+        // Auth button visibility
+        function updateAuthButton() {
+            const userId = localStorage.getItem('userId');
+            const userRole = localStorage.getItem('userRole');
+            const loginBtn = document.getElementById('loginBtn');
+            const logoutBtn = document.getElementById('logoutBtn');
+            if (userId && userRole) {
+                if (loginBtn) loginBtn.style.display = 'none';
+                if (logoutBtn) logoutBtn.style.display = 'inline-flex';
+            } else {
+                if (loginBtn) loginBtn.style.display = 'inline-flex';
+                if (logoutBtn) logoutBtn.style.display = 'none';
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem('userId');
+            localStorage.removeItem('userRole');
+            localStorage.removeItem('designation');
+            localStorage.removeItem('currentUser');
+            window.location.href = './login.html';
+        }
+
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
             loadMoodLogs();
             setupMobileMenu();
+            updateAuthButton();
         });
     </script>
 </body>
